tests/lean/slow/tactic2.lean
Theorem T (a : Bool) : a.
    apply (** REPEAT(id_tac) **).
    done.
